package com.yjotdev.ortografiamariamel.presentation.utils

/**
 * Object that contains all the test tags used in the application for instrumental testing.
 */
object TestTags {
    // Etiquetas estáticas
    const val START_VIEW_BTN_START = "START_VIEW_BTN_START"
    const val REGISTER_VIEW_BTN_NEXT = "REGISTER_VIEW_BTN_NEXT"
    const val TEXT_FIELD_WRITE_NAME = "TEXT_FIELD_WRITE_NAME"
    const val SLIDER_CHOOSE_AGE = "SLIDER_CHOOSE_AGE"
    const val MENU_BTN_COVER = "MENU_BTN_COVER"
    const val MENU = "MENU"
    const val BTN_BACK = "BTN_BACK"

    // Etiquetas dinámicas (prefijos con ":")
    const val UNIT_ITEM = "UNIT_ITEM:1"
    const val THEME_ITEM = "THEME_ITEM:1"
    const val ACTIVITY_ITEM = "ACTIVITY_ITEM:1"
}