<resources>
    <string name="app_name">O-Plus</string>
    <string name="start_title">Bienvenid@ a</string>
    <string name="register_view">REGISTRO</string>
    <string name="units_view">UNIDADES</string>
    <string name="button_cover">PORTADA</string>
    <string name="button_start">COMENZAR</string>
    <string name="button_next">SIGUIENTE</string>
    <string name="button_check">COMPROBAR</string>
    <string name="button_down">Atras</string>
    <string name="button_up">Seguir</string>
    <string name="button_back">Volver</string>
    <string name="button_restart">REINICIAR</string>
    <string name="button_unit_1">UNIDAD I</string>
    <string name="button_unit_2">UNIDAD II</string>
    <string name="button_unit_3">UNIDAD III</string>
    <string name="button_unit_4">UNIDAD IV</string>
    <string name="write_name">INGRESA TU NOMBRE</string>
    <string name="choose_age">Y TU EDAD</string>
    <string name="slider_age">%1$d AÑOS</string>
    <string name="title_unit">TEMA</string>
    <string name="activity_unit">ACTIVIDAD</string>
    <string name="subtitle_unit_1">Tilde diacrítica en monosílabos</string>
    <string name="summary_unit_1">
        Es un acento gráfico que se utiliza en palabras monosílabas o en
        palabras que se escriben igual pero que tienen distinto significado,
        sirve para diferenciar palabras que se escriben de la misma forma,
        pero tienen significados diferentes.
        Es decir, es la que permite distinguir palabras con idéntica forma,
        escritas con las mismas letras, pero que pertenecen a categorías
        gramaticales diferentes.
    </string>
    <string name="subtitle_unit_2">Uso de la C en palabras terminadas en \"cimiento\"</string>
    <string name="summary_unit_2">Texto del parrafo de la unidad 2</string>
    <string name="subtitle_unit_3">Uso de la Z en verbos terminados en \"ecer\" y \"ucir\"</string>
    <string name="summary_unit_3">Texto del parrafo de la unidad 3</string>
    <string name="subtitle_unit_4">Uso de la coma en enumeración</string>
    <string name="summary_unit_4">Texto del parrafo de la unidad 4</string>
    <string name="game_over">TE QUEDASTES SIN VIDAS\nSUERTE PARA LA PROXIMA</string>
    <string name="game_finish_lesson">FELICIDADES\nHAS FINALIZADO ESTA LECCIÓN</string>
    <string name="game_finish_unit">FELICIDADES\nHAS FINALIZADO LA\n%1$s</string>
    <string name="game_player">JUGADOR: %1$s</string>
    <string name="game_age">EDAD: %1$d</string>
    <string name="game_score">PUNTAJE: %1$d</string>
    <string name="game_success">ACIERTOS: %1$d</string>
    <string name="game_error">ERRORES: %1$d</string>
    <string name="game_title_1">Elija el monosilabo con su tipo correcto:</string>
    <string name="game_title_2">Selecciona y ubica el monosilabo correcto:</string>
    <string name="game_title_3">Escriba la respuesta correcta</string>
    <string name="toast_invalid_user">USUARIO INVALIDO</string>
</resources>