...
    )
    TextField(
        value = value,
        onValueChange = onValueChange,
        keyboardOptions = keyboardOption,
        singleLine = true,
        modifier = modifier.testTag("tag_write_name")
    )
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
private fun ChooseAge(
...
            Image(
                painter = painterResource(id = R.drawable.app_student),
                contentDescription = null,
                modifier = Modifier.height(dimensionResource(id = R.dimen.short7_dp))
            )
        },
        modifier = modifier.testTag("tag_choose_age")
    )
    Text(
        text = stringResource(id = labelId2, value.toInt()),
        color = MaterialTheme.colorScheme.primaryContainer,
        style = MaterialTheme.typography.titleLarge,
        modifier = modifier
...
